Fix image getting cut off when larger than window.

--- a/static/results.css
+++ b/static/results.css
@@ -1,3 +1,9 @@
+body {
+  display: flex;
+}
+body > div {
+  flex: auto;
+}
 .annotation-reset-body {
   position: fixed;
   left: 0;
